# talatrivia

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: deploy_docs.yml  test.yml
alembic/: env.py
alembic/versions/: 31654492ed3d_initial_migration.py
app/: main.py
app/api/routes/: health.py  play.py  questions.py  trivias.py  users.py
app/api/schemas/: answer.py  play.py  question.py  trivia.py  user.py
app/application/ports/: answer_repo.py  participation_repo.py  question_repo.py  trivia_repo.py  user_repo.py
app/application/use_cases/: answer_question.py  play_trivia.py  question.py  trivia.py  user.py
app/domain/: errors.py
app/domain/entities/: __init__.py  answer.py  participation.py  question.py  trivia.py  user.py
app/domain/services/: scoring.py
app/domain/value_objects/: difficulty.py  participation_status.py
app/infrastructure/db/: base.py  models.py  session.py
app/infrastructure/repositories/: answer_repo.py  participation_repo.py  question_repo.py  trivia_repo.py  user_repo.py
docs/: index.html
scripts/: export_openapi.py
tests/: test_answer.py  test_play.py  test_questions.py  test_ranking.py  test_trivias.py  test_users.py
